<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="scroll|enterAlways"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/navigate_before"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/user_toolbar_title"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/settings" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_weight="1"
                android:text="@string/switch_language" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="@color/blue"
                app:trackTint="@color/grey" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/action_logout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/logout"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_back_primary_15"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>